[gd_scene load_steps=3 format=3 uid="uid://b3u2h27mxthfv"]

[ext_resource type="Script" path="res://client/scripts/connection_scene.gd" id="1_3osvv"]

[sub_resource type="LabelSettings" id="LabelSettings_r3ysu"]
font_size = 32

[node name="connection_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3osvv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "UNTITLED SALBIH GAME"
label_settings = SubResource("LabelSettings_r3ysu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="username" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Username..."

[node name="host" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="join" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="start_game" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Starting game..."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
